{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 83,
  "lineage": "714b2484-6278-069b-91c5-d9cc07a20ced",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "template2-yousra-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bed1dd526493816",
            "domain": "vpc",
            "id": "eipalloc-03bed1dd526493816",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-172-46.compute-1.amazonaws.com",
            "public_ip": "34.228.172.46",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "template2-yousra-INSTANCE-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0073b571e79494cbf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0073b571e79494cbf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086e10507f67e7a9b",
            "private_dns": "ip-10-0-2-206.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-000f300c045c010c1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d61b0fca8b7b874",
            "tags": {
              "Name": "template2-yousra-INSTANCE-PRIVATE"
            },
            "tags_all": {
              "Name": "template2-yousra-INSTANCE-PRIVATE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064db09264d6d405b"
            ]
          },
          "dependencies": [
            "aws_security_group.template2-yousra-SG-PRIVATE",
            "aws_security_group.template2-yousra-SG-PUBLIC",
            "aws_subnet.template2-yousra-SUBNET-PRIVATE",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "template2-yousra-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cb4ca688797756f",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-089f23a4f7cbfe4f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-089f23a4f7cbfe4f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03881b65e2f950abd",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_ip": "54.144.121.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a0a09fd242436d9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ae65c65ff1378b7",
            "tags": {
              "Name": "template2-yousra-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "template2-yousra-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba1ee11d7f966d4a"
            ]
          },
          "dependencies": [
            "aws_security_group.template2-yousra-SG-PUBLIC",
            "aws_subnet.template2-yousra-SUBNET-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "template2-yousra-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:internet-gateway/igw-0aba3f29f63dca6c9",
            "id": "igw-0aba3f29f63dca6c9",
            "owner_id": "055574845309",
            "tags": {
              "Name": "template2-yousra-IGW"
            },
            "tags_all": {
              "Name": "template2-yousra-IGW"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "template2-yousra-NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bed1dd526493816",
            "association_id": "eipassoc-051e5b289fa78c5f8",
            "connectivity_type": "public",
            "id": "nat-0a1d4e97514794756",
            "network_interface_id": "eni-04f1fd260627e844d",
            "private_ip": "10.0.1.152",
            "public_ip": "34.228.172.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ae65c65ff1378b7",
            "tags": {
              "Name": "template2-yousra-NATGW"
            },
            "tags_all": {
              "Name": "template2-yousra-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.template2-yousra-EIP",
            "aws_subnet.template2-yousra-SUBNET-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "template2-yousra-RTB-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-0892d1c35776db396",
            "id": "rtb-0892d1c35776db396",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a1d4e97514794756",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "template2-yousra.RTB-PRIVATE"
            },
            "tags_all": {
              "Name": "template2-yousra.RTB-PRIVATE"
            },
            "timeouts": null,
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.template2-yousra-EIP",
            "aws_nat_gateway.template2-yousra-NATGW",
            "aws_subnet.template2-yousra-SUBNET-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "template2-yousra-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-072cb59b9ffcbc72b",
            "id": "rtb-072cb59b9ffcbc72b",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aba3f29f63dca6c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "template2-yousra-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "template2-yousra-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.template2-yousra-IGW",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "template2-yousra-RTB-PRIVATE-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5f918f586a193d5",
            "route_table_id": "rtb-0892d1c35776db396",
            "subnet_id": "subnet-07d61b0fca8b7b874"
          },
          "dependencies": [
            "aws_eip.template2-yousra-EIP",
            "aws_nat_gateway.template2-yousra-NATGW",
            "aws_route_table.template2-yousra-RTB-PRIVATE",
            "aws_subnet.template2-yousra-SUBNET-PRIVATE",
            "aws_subnet.template2-yousra-SUBNET-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "template2-yousra-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b70991ab801bc4",
            "route_table_id": "rtb-072cb59b9ffcbc72b",
            "subnet_id": "subnet-02ae65c65ff1378b7"
          },
          "dependencies": [
            "aws_internet_gateway.template2-yousra-IGW",
            "aws_route_table.template2-yousra-RTB-PUBLIC",
            "aws_subnet.template2-yousra-SUBNET-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "template2-yousra-SG-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-064db09264d6d405b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064db09264d6d405b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba1ee11d7f966d4a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922082029613400000003",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "template2-yousra-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "template2-yousra-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.template2-yousra-SG-PUBLIC",
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "template2-yousra-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0ba1ee11d7f966d4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba1ee11d7f966d4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230922082026454600000001",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "template2-yousra-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "template2-yousra-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "template2-yousra-SUBNET-PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-07d61b0fca8b7b874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d61b0fca8b7b874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "template2-yousra-SUBNET-PRIVATE"
            },
            "tags_all": {
              "Name": "template2-yousra-SUBNET-PRIVATE"
            },
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "dependencies": [
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "template2-yousra-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-02ae65c65ff1378b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ae65c65ff1378b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "template2-yousra-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "template2-yousra-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-03533fddde6da301a"
          },
          "dependencies": [
            "aws_vpc.template2-yousra-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "template2-yousra-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:vpc/vpc-03533fddde6da301a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-06e3f28720adecbf6",
            "default_security_group_id": "sg-0154703368308b974",
            "dhcp_options_id": "dopt-062c172c5a4285b27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03533fddde6da301a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e3f28720adecbf6",
            "owner_id": "055574845309",
            "tags": {
              "Name": "template2-yousra-VPC"
            },
            "tags_all": {
              "Name": "template2-yousra-VPC"
            }
          }
        }
      ]
    }
  ]
}